--- a/public_html/design.html
+++ b/public_html/design.html
@@ -38,6 +38,7 @@ and open the template in the editor.
         </section>
         <section>
             <h2>Mockup</h2>
+            <img src="images/mockup.png" alt="" />
         </section>
     </body>
 </html>
