Added the basic interface with styling and the Google Maps interface.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,11 +6,21 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Viewr</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+        <script src="js/Main.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div id="top">
+            <h1>Viewr</h1>
+        </div>
+        <div id="map"></div>
+        <div id="controls">
+            Controls go here!
+        </div>
     </body>
 </html>
