- Added Flickr API integration.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,6 +16,7 @@ and open the template in the editor.
         <script src="js/Location.js"></script>
         <script src="js/Photo.js"></script>
         <script src="js/Main.js"></script>
+        <script src="js/Flickr.js"></script>
     </head>
     <body>
         <div id="top">
@@ -25,7 +26,7 @@ and open the template in the editor.
         <div id="controls">
             <form>
                 Flickr Username:<br />
-                <input type="text" name="username" /><br />
+                <input id="username" type="text" name="username" /><br />
                 <button id="view">View Photos</button>
             </form>
         </div>
