--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,6 +13,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <script src="js/Location.js"></script>
         <script src="js/Photo.js"></script>
         <script src="js/Main.js"></script>
@@ -26,9 +27,14 @@ and open the template in the editor.
         <div id="controls">
             <form>
                 Flickr Username:<br />
-                <input id="username" type="text" name="username" /><br />
-                <button id="view">View Photos</button>
+                <input id="username" type="text" name="username" value="ryanrule-hoffman" /><br />
+                <button id="view">View Photos</button><br /><br />
+                <span id="loading">Retrieving photos...</span><br />
+                <span id="error">The specified user has no public photos with location data.</span>
             </form>
+            <span id="design">
+                <a href="design.html">Design Document</a>
+            </span>
         </div>
     </body>
 </html>
